--- a/frontend/ciudadanos.html
+++ b/frontend/ciudadanos.html
@@ -9,7 +9,7 @@
 <body>   
   <div class="row">
     <div class="col py-3 justify-content-center text-center">
-      <h1>Gestión Ciudadanos InterPlanetarios</h1>
+      <h1>INTERPOLIS || Gestión Ciudadanos InterPlanetarios</h1>
     </div>
   </div> 
     <div class="container mt-4 bg-body rounded shadow">        
@@ -21,7 +21,7 @@
   <table class="table table-bordered table-hover align-middle text-center w-100">
     <thead class="table-light">
       <tr>
-        <!--<th scope="col">Código</th>-->
+        <th scope="col">Código</th>
         <th scope="col">Nombre</th>
         <th scope="col">Apellidos</th>
         <th scope="col">Apodo</th>
