configuraciones para despliegue

--- a/frontend/ciudadanos.html
+++ b/frontend/ciudadanos.html
@@ -104,15 +104,9 @@
             <div class="row">
               <div class="col">
                   <div class="mb-3">
-                    <label for="foto" class="form-label">Foto</label>
-                    <input type="text" class="form-control" id="foto" placeholder="Foto">
-                  </div>          
-              </div>
-              <div class="col">
-                <div class="mb-3">
-                  <label for="codigoqr" class="form-label">Código QR</label>
-                  <input type="text" class="form-control" id="codigoqr" placeholder="Código QR">
-                </div>          
+                  <label for="foto" class="form-label">Foto</label>
+                  <input type="file" class="form-control" id="foto" name="foto" accept="image/*">
+              </div>          
               </div>
             </div>  
                       <!-- Footer con botones -->
