--- a/frontend/ciudadanos.html
+++ b/frontend/ciudadanos.html
@@ -51,7 +51,7 @@
       <!-- Header -->
       <div class="modal-header bg-body-primary">
         <h1 class="modal-title fs-5" id="modalCiudadanosLabel">
-          Gestión Ciudadanos InterPolis
+          Gestión Ciudadanos InterPolice
         </h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
